# Machathon-Autonomous-Vehicle

./: .gitignore  README.md
Solution/: package.xml  setup.cfg  setup.py
arduino_ble/: package.xml  setup.cfg  setup.py
arduino_ble/arduino_ble/: control_pub.py
car_demo/scripts/: data.py  judge.py  solution.py  waypointsGen.py
car_demo/scripts/modules/: control.py  method2.ipynb
esp32_cam/: package.xml  setup.cfg  setup.py
esp32_cam/esp32_cam/: cam_sub.py
esp_cam/: package.xml  setup.cfg  setup.py
esp_cam/esp_cam/: cam_sub.py  solution.py  test.py
esp_cam/launch/: launcher.py
solution/: package.xml  setup.py
solution/launch/: solution.launch.py
solution/solution/: solution.py
